<resources>
    <string name="app_name">Go Manabu</string>
    <string name="send">Send</string>
    <string name="hello">Hello</string>
    <string name="helloworld">Helloworld</string>
    <string name="halo">Halo!</string>
    <string name="init_message">
        Go! Manabu adalah Chatbot untuk belajar huruf-huruf jepang secara interaktif.
        Untuk detail lebih lanjut gunakan keyword: help
    </string>
    <string name="lanjut">
        Untuk mengetahui keyword lainnya gunakan: help
    </string>
    <string name="manabu_quiz">Manabu quiz</string>
    <string name="manabu_kana">Manabu kana</string>
    <string name="kanji">Kanji (input)</string>
    <string name="help">Help</string>
    <string name="go_manabu">Go Manabu</string>
    <string name="start_command">Start Command!</string>
    <string name="credit">Credit</string>
    <string name="kanjistring">Kanji</string>
</resources>
