<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--List view for displaying chat messages-->
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/quick_fill_button"
        android:divider="@null" />
    <!--To type and send the message-->
    <LinearLayout
        android:id="@+id/quick_fill_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_message_layout"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            fancy:fb_text="@string/kanji"
            fancy:fb_borderColor="@color/colorPrimary"
            fancy:fb_borderWidth="2dp"
            fancy:fb_radius="30dp"
            fancy:fb_defaultColor="#FFFFFF"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_textColor="@color/colorPrimary"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            fancy:fb_text="@string/manabu_quiz"
            fancy:fb_borderColor="@color/colorPrimary"
            fancy:fb_borderWidth="2dp"
            fancy:fb_radius="30dp"
            fancy:fb_defaultColor="#FFFFFF"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_textColor="@color/colorPrimary"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            fancy:fb_text="@string/manabu_kana"
            fancy:fb_borderColor="@color/colorPrimary"
            fancy:fb_borderWidth="2dp"
            fancy:fb_radius="30dp"
            fancy:fb_defaultColor="#FFFFFF"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_textColor="@color/colorPrimary"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            fancy:fb_text="@string/help"
            fancy:fb_borderColor="@color/colorPrimary"
            fancy:fb_borderWidth="2dp"
            fancy:fb_radius="30dp"
            fancy:fb_defaultColor="#FFFFFF"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_textColor="@color/colorPrimary"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/send_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginEnd="4dp"
            android:src="@android:drawable/ic_menu_send"
            android:text="@string/send" />
    </LinearLayout>

</RelativeLayout>
